# adrianLLM

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
common/: CMakeLists.txt
common/include/: read.h  stringutils.h  write.h
common/src/: basic_read.cpp  basic_write.cpp
dataextractor/: dataextractor.py
llm/: CMakeLists.txt  adrianLLM.cpp  adrianLLM.h
preparer/: CMakeLists.txt
preparer/src/: preparer.cpp  preparer.h
pyio/: basic_io.py
pypreparer/: preparer.py
scraper/: example.bat  scraper.py
urlfinder/: example.bat  urlfinder.py
